# azure-devops-django

./: .editorconfig  .gitignore  Dockerfile  README.md  azure-pipeline.yml.example  entrypoint.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  new-release.yml
azuredjango/: pyproject.toml
azuredjango/settings/: override.py
docs/: USAGE.md
